	New Dependencies
		ClickThroughBlocker
		ToolbarController
		SpaceTuxLibrary

6.0.0.1
	Fixed missing EVA experiments

6.0.0.2
	Fixed window not going away when clicking button 2nd time
	Fixed buttons not showing up on the Blizzy toolbar
	Added code to hide checklist window when game is paused
	Fixed typo in "Suppress results window"
	Updated .version file to only list 1.10.1 as compatibleok,th

6.0.0.3
	Fixed Status window (Here & Now) update if it was opened more than a few seconds after checklist opening

6.0.0.4 
	Fixed DMagic experiments

6.0.0.5
	Fixed missing science (there was a text filter blocking it)

6.0.0.6
	Fixed DMagic Bathymetry experiment.  Note:  You cannot be on the ocean floor (the experiment WILL work on the ocean floor, just not with X-Science)

6.0.0.7
	Added AssemblyFileVersion
	Updated version file for 1.12

6.0.0.8
	Renamed version file for better web url compatibility

6.0.0.9 
	Fixed typo  in X-Science/ScienceWindow.cs, "experiements unavialable"
	Thanks to github user @Goufalite for this:
		Shows the biomes in the language of the player. E.g. Grasslands => Praires in french

6.0.0.10
	Thanks to Github user @Samharris2020 for this:
		Updated KSP-AVC Plugin as to not link to a deleted thread page http://forum.kerbalspaceprogram.com/threads/79745
		Linked dependencies in installation instructions.
	Added new option to change the minimum science slider to 0.001 instead of 0.1

6.0.1
	Fixed all areas where 0.1 was hardcoded in place for the minimum  science
	Added option to totally hide the Min Science Slider on the Here & Now window

6.0.1.1
	Fixes / evolutions by Github user @alartor
		Fixed value of next run of experiment being calculated incorrectly when runs of experiment already done but not yet recovered at KSC.
		Set VeryLowMinScience to range from 0.0001 to 0.1
		Fixed experiments not being re-classified as completed or incomplete (and hidden or shown) after a change in the MinScience threshold changes their "status".