@@ -67,3 +67,5 @@ ChangeLog
 		Fixed value of next run of experiment being calculated incorrectly when runs of experiment already done but not yet recovered at KSC.
 		Set VeryLowMinScience to range from 0.0001 to 0.1
 		Fixed experiments not being re-classified as completed or incomplete (and hidden or shown) after a change in the MinScience threshold changes their "status".
+		Fixed 'Here and Now' window not resizing correctly when hiding MinScience slider.
+		Fixed position of experiment buttons in 'Here and Now' window when MinScience slider hidden.
